--- a/login.html
+++ b/login.html
@@ -17,7 +17,7 @@
 
         <div class="senha-container">
           <label for="senha">Senha</label>
-          <a href="#">Esqueceu Sua Senha ?</a>
+          <a href="home.html">Voltar à página inicial</a>
         </div>
         <input type="password" id="senha" placeholder="Insira sua senha." required />
 
