--- a/listaUsuarios.html
+++ b/listaUsuarios.html
@@ -22,13 +22,17 @@
             <h2>Usuarios Cadastrados</h2>
 
             <button onclick="abrirCadastro()" class="btn-edit">Cadastrar Novo Usuário</button>
-
+            <button onclick="window.location.href='http://127.0.0.1:5500/Front/avaliarUsuario.html'" class="btn-edit">
+                Cadastrar Nova Avaliação
+              </button>
+              
             <table aria-label="Lista de usuários">
                 <thead>
                     <tr>
                         <th>ID</th>
                         <th>Nome</th>
                         <th>Email</th>
+                        <th>Avaliações</th>
                         <th>Ações</th>
                     </tr>
                 </thead>
